project(PDCurses LANGUAGES C)

option(PDCURSES_DOS "Platform DOS" Off)
option(PDCURSES_OS2 "Platform OS2" Off)
option(PDCURSES_SDL1 "Platform SDL1" Off)
option(PDCURSES_SDL2 "Platform SDL2" Off)
option(PDCURSES_WINCON "Platform WINDOWS" Off)
option(PDCURSES_X11 "Platform X11" Off)

file(GLOB PDCURSES_SOURCES_BASE pdcurses/*.c)
file(GLOB PDCURSES_SOURCES_COMMON common/*.c)
file(GLOB PDCURSES_SOURCES_DOS dos/*.c)
file(GLOB PDCURSES_SOURCES_OS2 os2/*.c)
file(GLOB PDCURSES_SOURCES_SDL1 sdl1/*.c)
file(GLOB PDCURSES_SOURCES_SDL2 sdl2/*.c)
file(GLOB PDCURSES_SOURCES_WINCON wincon/*.c)
file(GLOB PDCURSES_SOURCES_X11 x11/*.c)

set(PDCURSES_SOURCES_PLATFORM "")

if(PDCURSES_DOS)
    set(PDCURSES_SOURCES_PLATFORM ${PDCURSES_SOURCES_DOS})
elseif(PDCURSES_OS2)
    set(PDCURSES_SOURCES_PLATFORM ${PDCURSES_SOURCES_OS2})
elseif(PDCURSES_SDL1)
    set(PDCURSES_SOURCES_PLATFORM ${PDCURSES_SOURCES_SDL1})
elseif(PDCURSES_SDL2)
    set(PDCURSES_SOURCES_PLATFORM ${PDCURSES_SOURCES_SDL2})
elseif(PDCURSES_WINCON)
    set(PDCURSES_SOURCES_PLATFORM ${PDCURSES_SOURCES_WINCON})
elseif(PDCURSES_X11)
    set(PDCURSES_SOURCES_PLATFORM ${PDCURSES_SOURCES_X11})
endif()

add_library(PDCurses 
    ${PDCURSES_SOURCES_BASE}
    ${PDCURSES_SOURCES_COMMON}
    ${PDCURSES_SOURCES_PLATFORM}    
)

target_include_directories(PDCurses PUBLIC .)